<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <modules>
        <module>message-pipe-server</module>
        <module>message-pipe-client</module>
        <module>message-pipe-spring-context</module>
        <module>message-pipe-core</module>
    </modules>
    <groupId>org.minbox.framework</groupId>
    <artifactId>message-pipe</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <properties>
        <revision>1.0.8-SNAPSHOT</revision>
        <minbox-bom.version>1.0.7</minbox-bom.version>
        <jdk.version>11</jdk.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <maven.test.skip>true</maven.test.skip>
        <flatten-maven-plugin.version>1.2.5</flatten-maven-plugin.version>
        <redisson.version>3.20.1</redisson.version>
        <grpc.version>1.45.1</grpc.version>
        <lombok.version>1.18.30</lombok.version>
        <nacos.version>1.4.3</nacos.version>
        <javax-annotation-api.version>1.3.2</javax-annotation-api.version>
        <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
        <maven.source.plugin.version>3.3.1</maven.source.plugin.version>
        <maven-javadoc-plugin.version>3.11.1</maven-javadoc-plugin.version>
    </properties>
    <description>
        Sequential message processing channel based on Redisson.
    </description>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:https://github.com/minbox-projects/message-pipe.git</connection>
        <developerConnection>scm:git:https://github.com/minbox-projects/message-pipe.git</developerConnection>
        <url>https://github.com/minbox-projects/message-pipe</url>
    </scm>
    <organization>
        <name>MinBox</name>
        <url>https://github.com/minbox-projects</url>
    </organization>
    <name>message-pipe</name>
    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
    <url>https://github.com/minbox-projects/message-pipe</url>
    <developers>
        <developer>
            <id>hengboy</id>
            <email>hengboy@minbox.org</email>
            <name>恒宇少年</name>
            <url>https://blog.yuqiyu.com</url>
            <organization>minbox-projects</organization>
            <organizationUrl>https://github.com/minbox-projects</organizationUrl>
        </developer>
    </developers>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.minbox.framework</groupId>
                <artifactId>minbox-bom</artifactId>
                <version>${minbox-bom.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-bom</artifactId>
                <version>${grpc.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.minbox.framework</groupId>
                <artifactId>message-pipe-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.minbox.framework</groupId>
                <artifactId>message-pipe-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.minbox.framework</groupId>
                <artifactId>message-pipe-spring-context</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.minbox.framework</groupId>
                <artifactId>message-pipe-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.nacos</groupId>
                <artifactId>nacos-client</artifactId>
                <version>${nacos.version}</version>
            </dependency>
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson</artifactId>
                <version>${redisson.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.annotation</groupId>
                <artifactId>javax.annotation-api</artifactId>
                <version>${javax-annotation-api.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--Source-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source.plugin.version}</version>
                <executions>
                    <execution>
                        <id>package</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--Javadoc-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
                <executions>
                    <execution>
                        <id>package</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.9.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>hengyu</publishingServerId>
                </configuration>
            </plugin>
            <!--GPG-->
            <plugin>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven-gpg-plugin.version}</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>